--- a/style.css
+++ b/style.css
@@ -43,19 +43,19 @@
       height: 100px;
       width: 100%;
       background: url('/source/img/444481.png') right /135px 33px no-repeat, black;
-
     }
-  .fujifilm{
-      width: 135px;
-      height: 33px;
-      size: 135;
-  }
 
-  nav{
-    /* display: flex; */
-  }
+    .contacts {
+      color: white;
+      font-size: 20px;
+      margin: auto;
+      max-width: 500px; 
+      /* display: flex; */
+      flex-wrap: wrap;
+      padding-top: 20px;
+    }
 
-  main{
+    main{
       margin: auto;
   }
 
@@ -63,6 +63,8 @@
     display: flex;
     flex-direction: column;
     max-width: 660px;
+  flex-wrap: wrap;
+
   }
   second-two{
     display: flex;
