--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+*{
     padding: 0;
     margin: 0;
     border: 0;
@@ -26,8 +26,16 @@
   a:visited {
     text-decoration: none;
   }
+
   a:hover {
     text-decoration: none;
+  }
+
+  @font-face {
+    font-family: "FujiyamaLight";
+    src: url("/source/fonts/Lobster-Regular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
   }
   
   img {
@@ -37,46 +45,62 @@
   body {
     background: url(/source/img/background-6650672_1280.jpg);
     background-size: cover; 
+  font-family: "FujiyamaLight";
+
   }
 
   header {
       height: 100px;
       width: 100%;
       background: url('/source/img/444481.png') right /135px 33px no-repeat, black;
-    }
+  }
 
     .contacts {
       color: white;
       font-size: 20px;
-      margin: auto;
-      max-width: 500px; 
+      max-width: 400px; 
       /* display: flex; */
       flex-wrap: wrap;
       padding-top: 20px;
+      padding-left: 50px;
+
     }
 
     main{
       margin: auto;
-  }
+      margin-top: 10px;
+      /* background-color: rgb(32, 30, 27); */
+      max-width: 800px;
+      height: 800px; 
+    }
 
-  first-two{
-    display: flex;
-    flex-direction: column;
-    max-width: 660px;
-  flex-wrap: wrap;
+    .cards{
+      /* background-color: rgb(241, 147, 7); */
+      max-width: 100%;
+      min-height: 50%;
+      display: flex;
+      justify-content: space-between;
+    flex-wrap: wrap;
 
-  }
+    }
+  
   second-two{
     display: flex;
-    flex-direction: column;
     max-width: 660px;
-
   }
   
-
   .card{
       width: 320px;
       height: 320px;
       background: black;
-      margin: 10px;
+      margin: auto;
+  border-radius: 1%;
+  color: white;
+  font-size: 40px;
+  text-align: center;
+
+  }
+  .text-in-card{
+    margin-top: 100px;
+
   }
