--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@
     font-weight: normal;
   }
   
+  html {
+    scroll-behavior: smooth; /* свойство scroll-behavior не наследуется, применяется к прокручиваемым блокам */ 
+  }
   img {
     vertical-align: top;
   }
@@ -45,7 +48,7 @@
   body {
     background: url(/source/img/background-6650672_1280.jpg);
     background-size: cover; 
-  font-family: "FujiyamaLight";
+  /* font-family: "FujiyamaLight"; */
 
   }
 
@@ -54,40 +57,34 @@
       width: 100%;
       background: url('/source/img/444481.png') right /135px 33px no-repeat, black;
   }
-
+/* 
     .contacts {
       color: white;
       font-size: 20px;
       max-width: 400px; 
-      /* display: flex; */
       flex-wrap: wrap;
       padding-top: 20px;
       padding-left: 50px;
 
-    }
+    } */
 
     main{
       margin: auto;
       margin-top: 10px;
       /* background-color: rgb(32, 30, 27); */
       max-width: 800px;
-      height: 800px; 
+      /* height: 1800px;  */
     }
 
     .cards{
       /* background-color: rgb(241, 147, 7); */
       max-width: 100%;
-      min-height: 50%;
+      min-height: 400px;
       display: flex;
       justify-content: space-between;
     flex-wrap: wrap;
 
     }
-  
-  second-two{
-    display: flex;
-    max-width: 660px;
-  }
   
   .card{
       width: 320px;
@@ -98,9 +95,56 @@
   color: white;
   font-size: 40px;
   text-align: center;
+  font-family: "FujiyamaLight";
+
 
   }
   .text-in-card{
     margin-top: 100px;
 
+  }
+
+  /* .map {
+    margin: auto;
+    width: 100%;
+    /* height: 500px; */
+    /* background-color: rgb(241, 147, 7); */
+
+  } */
+
+  .about-us {
+    width: 100%;
+    height: 500px;
+    font-size: 20px;
+  }
+
+  .photo-for-documents {
+    width: 100%;
+    height: 500px;
+    font-size: 20px;
+  }
+
+  .print {
+    width: 100%;
+    height: 500px;
+    font-size: 20px;
+  }
+
+  
+  .polygraphy {
+    width: 100%;
+    height: 500px;
+    font-size: 20px;
+  }
+
+  .accessories {
+    width: 100%;
+    height: 500px;
+    font-size: 20px;
+  }
+
+  .contacts {
+    width: 100%;
+    height: 100px;
+    font-size: 20px;
   }
