--- a/style.css
+++ b/style.css
@@ -37,7 +37,31 @@
     font-style: normal;
     font-weight: normal;
   }
-  
+
+  @font-face {
+    font-family: "exo";
+    src: url("/source/fonts/static/Exo2-Bold.ttf") format("truetype");
+    /* src: url("/source/fonts/Exo2-VariableFont_wght.ttf") format("truetype"); */
+    
+    font-style: normal;
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-family: "exoBlack";
+    src: url("/source/fonts/FiraSans-Light.ttf") format("truetype");
+    /* src: url("/source/fonts/Exo2-VariableFont_wght.ttf") format("truetype"); */
+    
+    font-style: normal;
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-family: "FiraSansCondensed";
+    src: url("/source/fonts/FiraSansCondensed-Regular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+  }
   html {
     scroll-behavior: smooth; /* свойство scroll-behavior не наследуется, применяется к прокручиваемым блокам */ 
   }
@@ -49,13 +73,34 @@
     background: url(/source/img/background-6650672_1280.jpg);
     background-size: cover; 
   /* font-family: "FujiyamaLight"; */
-
   }
 
   header {
       height: 100px;
       width: 100%;
+
       background: url('/source/img/444481.png') right /135px 33px no-repeat, black;
+  }
+  .contacts-and-about-us {
+    /* display: flex; */
+    /* max-width: 400px; */
+    /* top: 20px; */
+    justify-content: space-between;
+    flex-wrap: wrap;
+    /* margin: auto; */
+    /* padding-top: 40px; */
+    max-width: 100px;
+
+    font-family: "exo";
+    font-size: 20px;
+    /* position: relative; */
+    /* left: 30px; */
+    padding-left: 30px;
+  }
+  .contacts-and-about-us a{
+    display: block;
+    padding-top: 20px;
+    color: white;
   }
 /* 
     .contacts {
@@ -74,6 +119,8 @@
       /* background-color: rgb(32, 30, 27); */
       max-width: 800px;
       /* height: 1800px;  */
+    font-family: "exoBlack";
+
     }
 
     .cards{
@@ -101,50 +148,52 @@
   }
   .text-in-card{
     margin-top: 100px;
-
   }
-
-  /* .map {
-    margin: auto;
-    width: 100%;
-    /* height: 500px; */
-    /* background-color: rgb(241, 147, 7); */
-
-  } */
-
+  
   .about-us {
     width: 100%;
     height: 500px;
     font-size: 20px;
   }
 
-  .photo-for-documents {
+  .blok {
     width: 100%;
     height: 500px;
     font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.9);
+    margin-bottom: 10px;
+    color: white;
+    
+  }
+  h2{
+    margin-bottom: 30px;
   }
 
   .print {
-    width: 100%;
-    height: 500px;
-    font-size: 20px;
   }
 
   
   .polygraphy {
-    width: 100%;
-    height: 500px;
-    font-size: 20px;
   }
 
   .accessories {
-    width: 100%;
-    height: 500px;
-    font-size: 20px;
   }
 
   .contacts {
-    width: 100%;
+    /* padding-left: 200px; */
+  }
+
+  footer{
     height: 100px;
-    font-size: 20px;
+    width: 100%;
+    background-color: black;
+    color: white;
+font-size: 15px;
+    font-family: "exoBlack";
+
+  }
+  footer p {
+    margin: auto;
+    padding-top: 50px;
+    width: 100px;
   }
