--- a/style.css
+++ b/style.css
@@ -33,15 +33,21 @@
 
   
   @media (max-width: 10000px) {
-    .card {
-      width: 320px;
-      height: 320px;
+    .menu {
+      padding-top: 40px;
+      /* height: 320px; */
     }
 
-    @media (max-width: 400px) {
-      .card {
-        width: 160px;
-        height: 160px;
+    @media (max-width: 930px) {
+      .menu {
+        padding-top: 20px;
+
+      }
+    }
+    @media (max-width: 564px) {
+      .menu {
+        padding-top: 10px;
+
       }
     }
 
@@ -96,25 +102,20 @@
 
       background: url('source/img/444481.png') right /135px 33px no-repeat, black;
   }
-  .contacts-and-about-us {
-    /* display: flex; */
-    /* max-width: 400px; */
-    /* top: 20px; */
+  .menu {
     justify-content: space-between;
     flex-wrap: wrap;
-    /* margin: auto; */
-    /* padding-top: 40px; */
-    max-width: 100px;
-
+    max-width: 1000px;
     font-family: "exo";
     font-size: 20px;
-    /* position: relative; */
-    /* left: 30px; */
-    padding-left: 30px;
+    padding-left: 60px;
+    display: flex;
+    gap: 10px;
+    margin-right: 150px;
   }
-  .contacts-and-about-us a{
+  .menu a{
     display: block;
-    padding-top: 20px;
+    /* padding-top: 20px; */
     color: white;
   }
 /* 
