--- a/style.css
+++ b/style.css
@@ -36,20 +36,49 @@
     .menu {
       padding-top: 40px;
       /* height: 320px; */
+      display: flex;
+
+    }
+    .burger {
+      display: none;
+
     }
 
     @media (max-width: 930px) {
       .menu {
         padding-top: 20px;
+        display: flex;
+
+      }
+      .burger {
+        display: none;
 
       }
     }
     @media (max-width: 564px) {
       .menu {
         padding-top: 10px;
+        display: flex;
+      }
+
+      .burger {
+        display: none;
 
       }
     }
+    
+    @media (max-width: 490px) {
+      .burger {
+        display: block;
+
+      }
+      .menu {
+        display: none;
+        flex-direction: column;
+      }
+    }
+
+
 
   @font-face {
     font-family: "FujiyamaLight";
@@ -102,6 +131,14 @@
 
       background: url('source/img/444481.png') right /135px 33px no-repeat, black;
   }
+
+  .burger {
+    width: 30px;
+    height: 30px;
+    filter: invert(1);
+
+  }
+
   .menu {
     justify-content: space-between;
     flex-wrap: wrap;
@@ -109,7 +146,6 @@
     font-family: "exo";
     font-size: 20px;
     padding-left: 60px;
-    display: flex;
     gap: 10px;
     margin-right: 150px;
   }
