--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@
   html {
     scroll-behavior: smooth; /* свойство scroll-behavior не наследуется, применяется к прокручиваемым блокам */ 
   }
+
   img {
     vertical-align: top;
   }
@@ -79,7 +80,10 @@
       height: 100px;
       width: 100%;
       background: url('source/img/444481.png') right /135px 33px no-repeat, black;
-  }
+      position: fixed;
+      top: 0px;
+      transition: 0.2s;
+    }
 
   .burger {
     width: 30px;
