--- a/style.css
+++ b/style.css
@@ -80,9 +80,9 @@
       height: 100px;
       width: 100%;
       background: url('source/img/444481.png') right /135px 33px no-repeat, black;
-      position: fixed;
+      /* position: fixed; */
       top: 0px;
-      transition: 0.2s;
+      /* transition: 0.2s; */
     }
 
   .burger {
@@ -92,6 +92,7 @@
     display: none;
     padding-top: 35px;
     padding-left: 20px;
+    position: fixed;
   }
 
   .menu {
@@ -190,6 +191,9 @@
     @media (max-width: 564px) {
       .menu {
         padding-top: 10px;
+      }
+      .cross-menu{
+        position: fixed;
       }
     }
     
