--- a/style.css
+++ b/style.css
@@ -79,10 +79,12 @@
   header {
       height: 100px;
       width: 100%;
-      background: url('source/img/444481.png') right /135px 33px no-repeat, black;
+      background: black;
+      /* background: url('source/img/444481.png') right /135px 33px no-repeat, black; */
       /* position: fixed; */
       top: 0px;
       /* transition: 0.2s; */
+      display: flex;
     }
 
   .burger {
@@ -100,14 +102,24 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 10px;
-    max-width: 1000px;
+    gap: 20px;
+    max-width: 1500px;
   }
 
   .menu a{
     display: block;
     color: white;
   }
+
+.logo{
+  color: white;
+  top: 20px;
+  right: 120px;
+  position: absolute;
+  width: 50px;
+  font-family: "exo";
+
+}
 
   .cross-menu{
     flex-wrap: wrap;
@@ -133,8 +145,8 @@
 
   main{
       margin: auto;
-      margin-top: 10px;
-      max-width: 800px;
+      /* margin-top: 10px; */
+      /* max-width: 800px; */
       font-family: "exoBlack";
   }
 
@@ -148,18 +160,21 @@
     font-size: 20px;
   }
 
-  .blok {
+  .block {
     width: 100%;
     height: 500px;
     font-size: 20px;
     background-color: rgba(0, 0, 0, 0.9);
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     color: white;
+    max-width: 800px;
+    margin: auto;
     
   }
 
   h2{
     margin-bottom: 30px;
+    font-size: 80px;
   }
 
   footer{
