--- a/style.css
+++ b/style.css
@@ -104,6 +104,14 @@ h6 {
   font-style: normal;
   font-weight: normal;
 }
+
+@font-face {
+  font-family: "MarckScript-Regular";
+  src: url("source/fonts/Marck_Script/MarckScript-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
 html {
   scroll-behavior: smooth; /* свойство scroll-behavior не наследуется, применяется к прокручиваемым блокам */
 }
@@ -227,28 +235,64 @@ a:visited {
 }
 
 .photo-for-documents{
-  min-height: calc(1230px * var(--size-coeff));
   background: #BD87E7;
 }
 
-.photo-for-documents-content{
+.block{
+  min-height: calc(1230px * var(--size-coeff));
+}
+
+.block-content{
   max-width: calc(var(--total-width) * var(--size-coeff));
   min-height: 1186px;
-  background: chartreuse;
   margin: auto;
+  padding: 50px 20px;
+}
+
+.block-content-title{
+  font-family: "Montserrat-Black";
+  font-size: calc(64px * var(--size-coeff));
   text-align: center;
 }
 
-.photo-for-documents-content-text1{
-  font-family: "Montserrat-Black";
-  font-size: calc(64px * var(--size-coeff));
-}
-
-.photo-for-documents-content-text2{
+.block-content-text{
   font-family: "Montserrat-Regular";
   font-size: calc(36px * var(--size-coeff));
+  text-align: center;
+
 }
 
+.cards{
+  display: flex;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
+  gap: calc(100px * var(--size-coeff));
+  width: 100%;
+  height: 100%;
+}
+
+.card{
+  width: calc(330px * var(--size-coeff));
+  height: calc(450px * var(--size-coeff));
+  position: relative;
+  margin: auto;
+
+}
+
+.card-img{
+  width: calc(330px * var(--size-coeff));
+  height: calc(450px * var(--size-coeff));
+
+}
+
+.card-text{
+  position: absolute;
+  bottom: calc(10px * var(--size-coeff));
+  text-align: center;
+  left: calc(45px * var(--size-coeff));
+  font-family: "MarckScript-Regular";
+  font-size: calc(36px * var(--size-coeff));
+}
 
 
 
